pylibftdi changes
=================

0.13pre
~~~~~~~

* Don't error out on failure during string retrieval part of device
  enumeration (list_devices) on failure to read product manufacturer,
  description or serial number (bitbucket issue #10)
* USB_PID_LIST now defaults to 0x6001, 0x6010, 0x6011, 0x6014. The new
  entries are 0x6010 and 0x6011. Note that USB_PID has been removed, and
  USB_VID has been replaced with FTDI_VENDOR_ID

0.12
~~~~
* Optimisation on accessing port property when direction is set to ALL_OUTPUTS
  - don't bother reading the pins first. Makes ``port`` identical to ``latch``
  in this case.
* Support for libftdi 1.x, used by preference over ftdi 0.x. The specific
  driver search can be given as a string (or tuple of strings) to the
  ``Driver`` constructor, e.g. the default is equivalent to::

      >>> d = Driver()
      >>> # equivalent to...
      >>> d = Driver(('ftdi1', 'libftdi1', 'ftdi', 'libftdi'))
      >>> # and if we wanted to use ftdi 0.x on Linux:
      >>> d = Driver('ftdi')

  The driver in use can be determined by ``Driver.libftdi_version()`` method::

      >>> from pylibftdi import Driver
      >>> Driver().libftdi_version()
      (1, 0, 0, '1.0', 'v1.0-6-gafb9082')
      >>> Driver('ftdi').libftdi_version()
      (0, 99, 0, '0.99', 'v0.17-305-g50d77f8')

* Support for MS Windows (which requires the 'lib' prefix on ftdi searching -
  previously absent).
* Minor bug fixes

0.11
~~~~

* API changes
    * Device() parameter 'interface' has been renamed to 'interface_select',
      as it wasn't clear what this meant. Symbolic constants 'INTERFACE_ANY',
      'INTERFACE_A'/B/C/D are provided in the pylibftdi package namespace.
    * Device() parameter 'buffer_size' has been renamed to 'chunk_size' because
      there isn't any buffering going on, so it was potentially misleading.
    * new 'latch' property on BitBangDevices reflects current state of output